--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -17,7 +17,7 @@
         </div>
     </div>
 </header>
-<section class="page-section bg-secondary" id="about">
+<section class="page-section bg-admission" id="about">
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-lg-8 text-center">
@@ -27,7 +27,7 @@
                     aucun frais de service. Une fois inscrit, nous vous aidons durant toutes vos démarches (Campus
                     France, Visa, entretien…) et tout ça gratuitement ! vous payez seulement les frais demandé par
                     l’école que vous aurez choisi.</p>
-                <a class="btn btn-light btn-xl" href="{{path('app_assertion_new')}}">Postulez maintenant !</a>
+                <a class="btn btn-primary btn-xl" href="{{path('app_assertion_new')}}">Postulez maintenant !</a>
             </div>
         </div>
     </div>
