--- a/templates/home/new.html.twig
+++ b/templates/home/new.html.twig
@@ -1,20 +1,18 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 <!-- Contact-->
-<section class="page-section bg-secondary mt-5">
+<section class="page-section bg-admission" style="margin-top: 6rem; padding: 4rem 0;">
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-lg-8 text-center">
-                <h2 class="text-white mt-0">Les plus de nos services </h2>
+                <h2 class="text-white mt-0 ml-1">Les plus de nos services</h2>
                 <hr class="divider divider-light" />
-                <p class="text-white-75 mb-4">
-                    <ul style="list-style-type: none;">
-                        <li>Plus de 50 écoles partenaires</li>
-                        <li>Aucun frais d’agence, service totalement gratuit</li>
-                        <li>Accompagnement jusqu’à l’obtention de visa </li>
-                        <li>Et plus encore….</li>
-                    </ul>
-                </p>
+                <ul class="text-white" style="list-style-type: none; padding-inline-start: 0px;">
+                    <li>Plus de 50 écoles partenaires</li>
+                    <li>Aucun frais d’agence, service totalement gratuit</li>
+                    <li>Accompagnement jusqu’à l’obtention de visa </li>
+                    <li>Et plus encore….</li>
+                </ul>
             </div>
         </div>
     </div>
