--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,7 +1,5 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
-
 {% block body %}
 <div class="container page-section">
     <div class="row d-flex justify-content-center">
@@ -16,7 +14,6 @@
             </div>
             {% endif %}
 
-            <h1 class="h3 mb-3 font-weight-normal">Log in</h1>
             <label for="inputEmail">Email</label>
             <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control"
                 autocomplete="email" required autofocus>
@@ -27,7 +24,7 @@
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
             <button class="btn btn-success mt-3" type="submit">
-                Sign in
+                Se connecter
             </button>
         </form>
     </div>
