--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -9115,6 +9115,11 @@ fieldset:disabled .btn {
   background-color: rgba(var(--bs-secondary-rgb), var(--bs-bg-opacity)) !important;
 }
 
+.bg-admission {
+  --bs-bg-opacity: 1;
+  background-color: hsl(228.65deg 27.41% 26.47%) !important;
+}
+
 .bg-success {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-success-rgb), var(--bs-bg-opacity)) !important;
@@ -12610,7 +12615,7 @@ body {
 }
 
 .page-section {
-  padding: 8rem 0;
+  padding: 6rem 0;
 }
 
 .text-white-75 {
@@ -12640,7 +12645,7 @@ hr.divider-light {
 
 #mainNav {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-  background-color: #fff;
+  background-color: hsl(228.65deg 27.41% 26.47%);
   transition: background-color 0.2s ease;
 }
 
@@ -12651,7 +12656,7 @@ hr.divider-light {
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
-  color: #6c757d;
+  color: #fff;
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   font-size: 0.9rem;
@@ -12664,13 +12669,13 @@ hr.divider-light {
 }
 
 #mainNav .navbar-nav .nav-item .nav-link.active {
-  color: #f4623a !important;
+  color: #fff !important;
 }
 
 @media (min-width: 992px) {
   #mainNav {
     box-shadow: none;
-    background-color: transparent;
+    background-color: hsl(228.65deg 27.41% 26.47%);
   }
 
   #mainNav .navbar-brand {
@@ -12696,7 +12701,7 @@ hr.divider-light {
 
   #mainNav {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-    background-color: #fff;
+    background-color: hsl(228.65deg 27.41% 26.47%);
   }
 
   #mainNav .navbar-brand {
@@ -12708,7 +12713,7 @@ hr.divider-light {
   }
 
   #mainNav .navbar-nav .nav-item .nav-link {
-    color: #212529;
+    color: #fff;
   }
 
   #mainNav .navbar-nav .nav-item .nav-link:hover {
