--- a/templates/home/new.html.twig
+++ b/templates/home/new.html.twig
@@ -66,6 +66,9 @@
                 <div class="assertToOtherSchoolNoWhy" style="display: none;">
                     {{ form_row(form.assertToOtherSchoolNoWhy) }}
                 </div>
+                <div class="assertToOtherSchoolNoWhyOther" style="display: none;">
+                    {{ form_row(form.assertToOtherSchoolNoWhyOther) }}
+                </div>
                 <div class="firstName">
                     {{ form_row(form.firstName) }}
                 </div>
