--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div class="container page-section">
+<div class="container page-section h-100" style="margin-top: 100px;">
     <div class="row d-flex justify-content-center">
         <form method="post" class="col-md-6">
             {% if error %}
