--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -21,13 +21,16 @@
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-lg-8 text-center">
-                <h2 class="text-white mt-0">Admission Ecole</h2>
+                <h2 class="text-white mt-0 ml-1">Les plus de nos services</h2>
                 <hr class="divider divider-light" />
-                <p class="text-white-75 mb-4">Admission Ecole vous accompagne pour trouver votre école en France sans
-                    aucun frais de service. Une fois inscrit, nous vous aidons durant toutes vos démarches (Campus
-                    France, Visa, entretien…) et tout ça gratuitement ! vous payez seulement les frais demandé par
-                    l’école que vous aurez choisi.</p>
-                <a class="btn btn-primary btn-xl" href="{{path('app_assertion_new')}}">Postulez maintenant !</a>
+                <ul class="text-white" style="list-style-type: none; padding-inline-start: 0px;">
+                    <li>Admission Ecole vous accompagne pour :</li>
+                    <li>Trouver votre école en France sans aucun frais de service</li>
+                    <li>Vous aider durant toutes vos démarches (Campus France, entretien)</li>
+                    <li>Construire votre dossier visa</li>
+                    <li>Et tout ça gratuitement !</li>
+                </ul>
+                <a class="btn btn-primary btn-xl mt-4" href="{{path('app_assertion_new')}}">Postulez maintenant !</a>
             </div>
         </div>
     </div>
