--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -12730,7 +12730,12 @@ header.masthead {
   background-attachment: scroll;
   background-size: cover;
 }
-
+.bg-tour-effeil {
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../img/bg-masthead.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 header.masthead h1,
 header.masthead .h1 {
   font-size: 2.25rem;
