--- a/templates/home/new.html.twig
+++ b/templates/home/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 <!-- Contact-->
-<section class="page-section bg-admission" style="margin-top: 6rem; padding: 4rem 0;">
+<section class="page-section bg-admission bg-tour-effeil" style="margin-top: 6rem; padding: 4rem 0;">
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-lg-8 text-center">
