add phone number

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,11 +27,14 @@
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+             <ul class="navbar-nav ms-auto my-2 my-lg-0">
+                 <li class="nav-item text-white">+33758887739</li>
+             </ul>  
+            
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto my-2 my-lg-0">
                     <li class="nav-item"><a class="nav-link" href="{{path('app_home')}}">Accueil</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{path('app_assertion_new')}}">Postuler Mantenant</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="{{path('app_assertion_new')}}">Postuler Mantenant</a></li>
                 </ul>
             </div>
         </div>
@@ -41,6 +44,7 @@
     <footer class="bg-light py-5">
         <div class="container px-4 px-lg-5">
             <div class="small text-center text-muted">Copyright &copy; {{ "now"|date("Y") }} - Admission Ecole</div>
+            <div class="small text-center text-muted">contact@admission-ecole.com</div>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
