--- a/templates/home/success_assertion.html.twig
+++ b/templates/home/success_assertion.html.twig
@@ -1,14 +1,15 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 <!-- Contact-->
-<section class="page-section bg-secondary mt-5" style="min-height: 80vh;">
+<section class="page-section bg-admission mt-5" style="min-height: 80vh;">
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-lg-8 text-center">
+            <div class="col-lg-8 text-center"><br><br><br><br>
                 <h2 class="text-white mt-0">Félicitations !</h2>
                 <hr class="divider divider-light" />
                 <p class="text-white-75 mb-4">
-                    Votre demande a bien été transmise, nous revenons vers vous très bientôt afin de vous proposer une formation qui convient à votre projet !
+                    Votre demande a bien été transmise, nous revenons vers vous très bientôt afin de vous proposer une
+                    formation qui convient à votre projet !
                 </p>
             </div>
         </div>
