--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -18,6 +19,7 @@
     {% block javascripts %}
     {% endblock %}
 </head>
+
 <body>
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
@@ -27,14 +29,13 @@
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-             <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                 <li class="nav-item text-white">+33758887739</li>
-             </ul>  
-            
+            <ul class="navbar-nav ms-auto my-2 my-lg-0">
+                <li class="nav-item text-white">+33758887739</li>
+            </ul>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto my-2 my-lg-0">
                     <li class="nav-item"><a class="nav-link" href="{{path('app_home')}}">Accueil</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{path('app_assertion_new')}}">Postuler Mantenant</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{path('app_assertion_new')}}">Postulez maintenant</a></li>
                 </ul>
             </div>
         </div>
