changes in template

--- a/templates/assertion/index.html.twig
+++ b/templates/assertion/index.html.twig
@@ -1,15 +1,11 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}Assertion index{% endblock %}
-
 {% block body %}
 <div class="container page-section" style="min-height: 80vh;">
     <table class="table">
         <thead>
             <tr>
                 <th>ID</th>
-                <th>Prénom</th>
-                <th>Nom</th>
+                <th>Nom & Prénom</th>
                 <th>Email</th>
                 <th>Nationalité</th>
                 <th>Ville</th>
@@ -21,8 +17,7 @@
             {% for assertion in assertions %}
             <tr>
                 <td>{{ assertion.id }}</td>
-                <td>{{ assertion.firstName }}</td>
-                <td>{{ assertion.familyName }}</td>
+                <td>{{ assertion.familyName }} {{ assertion.firstName }}</td>
                 <td>{{ assertion.email }}</td>
                 <td>{{ assertion.nationality }}</td>
                 <td>{{ assertion.city }}</td>
