--- a/templates/assertion/show.html.twig
+++ b/templates/assertion/show.html.twig
@@ -61,12 +61,8 @@
                 <td>{{ assertion.assertToOtherSchoolNoWhy }}</td>
             </tr>
             <tr>
-                <th>Prénom</th>
-                <td>{{ assertion.firstName }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ assertion.familyName }}</td>
+                <th>Nom & Prénom</th>
+                <td>{{ assertion.firstName }} {{ assertion.familyName }}</td>
             </tr>
             <tr>
                 <th>Email</th>
